# vote-herder

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  vote_json.py
counts/: apps.py  models.py  tests.py  urls.py  utils.py  views.py
counts/migrations/: 0001_initial.py
counts/templates/: base.html  home.html
demo/: views.py
notebooks/: DB_Querying.ipynb  EONI Import Fixup.ipynb  Import EONI Sheets.ipynb  StageAnalysisCleanup.ipynb  StateMachineModelling.ipynb  Visualisation.ipynb
transfer_mapper/: package-lock.json  package.json
transfer_mapper/components/: TransferMap.svelte
transfer_mapper/src/: App.svelte
transfer_mapper/src/assets/: votes.json
voteherder/: StageAnalysisCleanup.ipynb  StateMachineModelling.ipynb  admin.py  apps.py  models.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py
voteherder/counts/: admin.py  api.py  apps.py  commands.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
voteherder/counts/management/: drop_duplicate_stages.py
voteherder/counts/migrations/: 0001_initial.py
voteherder/counts/templates/: ballot_detail.html  candidate_detail.html  election_detail.html  stage_detail.html  table_view.html
voteherder/demo/: models.py  schemas.py  serializers.py  urls.py  views.py
voteherder/management/commands/: populate_nia_count.py  sync_dc.py
voteherder/templates/: about.html  base.html  bootstrap.html  election_detail.html
voteherder/voteherder/: api.py  asgi.py  settings.py  urls.py  wsgi.py
voteherder/voteherder/templates/: base.html
(+3 files in other folders)
