[tool.poetry]
name = "vote-herder"
version = "0.1.0"
description = "Slightly Easier than Herding Cats."
authors = ["Your Name <you@example.com>"]
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"
packages = [{include = "voteherder"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
uk-election-ids = "^0.6.1"
requests = "^2.28.2"
python3-openid = "^3.2.0"
django-allauth = "^0.52.0"
django-rest-swagger = "^2.2.0"
django-tables2 = "^2.5.1"
django-extensions = "^3.2.1"
django-computed-property = "^0.3.0"
django-bootstrap4 = "^22.3"
django-ninja = "^0.20.0"


[tool.poetry.group.dev.dependencies]
djangorestframework-types = "^0.8.0"
django-stubs = "^1.14.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
